--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-size: 100%;
+  background-image: url('./components/images/kameHouse.jpg')
 }
 
 code {
